[package]
name = "ptl"
version = "0.0.1"
authors = ["Jeff Cousino <j.cousino.consulting@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
chrono = { version = "0.4.0", features = ["serde"] }
directories = "3.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
